--- a/app/src/main/res/layout/user_review.xml
+++ b/app/src/main/res/layout/user_review.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -7,7 +8,7 @@
         android:id="@+id/user_review_card"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="10dp"
+
         app:cardCornerRadius="15dp"
         app:cardElevation="3dp"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,13 +31,14 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:text="THE CENTRAL BAR"/>
             <androidx.appcompat.widget.AppCompatRatingBar
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:layout_marginTop="20dp"
-                android:isIndicator="true"
+                android:isIndicator="false"
                 android:numStars="5"
                 android:stepSize="0.5"
                 android:max="5"
+                android:layout_gravity="center"
                 />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
@@ -45,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@+id/user_review_card"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="3dp">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -88,6 +90,7 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="75dp"
+                android:layout_margin="10dp"
                 android:layout_height="75dp"
                 app:cardElevation="3dp"
                 app:cardCornerRadius="15dp"
@@ -114,6 +117,23 @@
                     android:layout_gravity="center"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/user_price_input_card"
+        android:layout_marginTop="10dp"
+        android:gravity="center">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/send_review_btn"
+            app:icon="@drawable/ic_ok_btn"
+            app:iconGravity="textStart"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
