--- a/app/src/main/res/layout/user_review.xml
+++ b/app/src/main/res/layout/user_review.xml
@@ -31,6 +31,7 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:text="THE CENTRAL BAR"/>
             <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/user_review_card_user_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:layout_marginTop="20dp"
