--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,20 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="10dp"
         android:contentDescription="TODO" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_end_nav"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="30dp"
+        app:backgroundTint="@color/red"
+        android:src="@drawable/ic_end_nav"
+        android:foregroundGravity="center"
+        app:fabCustomSize="48dp"
+        android:visibility="invisible"
+        android:contentDescription="End navigation button" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
