--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         app:cardCornerRadius="30dp"
-        android:layout_height="230dp"
+        android:layout_height="180dp"
+        app:cardElevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="216dp">
@@ -17,33 +19,46 @@
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-
             <TextView
                 android:id="@+id/tvPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:text="35 kr"
+                android:textColor="@color/black"
+                android:text="35"
                 android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/krView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="20dp"
+                android:text="kr"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/tvPrice"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvDistance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:text="5 min"
-                android:textSize="10sp"
+                android:layout_marginStart="5dp"
+                android:drawableLeft="@drawable/ic_baseline_directions_walk_24"
+                android:text="10 mins"
+                android:textColor="@color/black"
+                android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvPrice" />
 
             <TextView
                 android:id="@+id/tvBarName"
                 android:layout_width="wrap_content"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="The Central Bar"
@@ -78,112 +93,41 @@
                 android:max="5"
                 android:numStars="5"
                 android:stepSize="0.5"
+                android:theme="@style/RatingBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAddress" />
 
-            <Button
+            <TextView
                 android:id="@+id/bDirection"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#4B668E"
+                android:drawableLeft="@drawable/ic_baseline_directions_24"
+                android:paddingLeft="20dp"
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:elevation="3.5dp"
+                android:textColor="#ffffff"
+                android:background="@drawable/buttons_dialog"
                 android:text="Vägbeskrivning"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rbBar" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#4B668E"
-                android:text="Uber"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bDirection" />
-
+<!--            <TextView-->
+<!--                android:id="@+id/button2"-->
+<!--                android:layout_width="180dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:elevation="3.5dp"-->
+<!--                android:layout_marginTop="7dp"-->
+<!--                android:background="@drawable/buttons_dialog"-->
+<!--                android:gravity="center"-->
+<!--                android:text="Uber"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="#ffffff"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/bDirection" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--    android:id="@+id/llContainer"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="wrap_content"-->
-    <!--    android:orientation="horizontal"-->
-    <!--    >-->
-
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="vertical">-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/tvPrice"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="35 kr"-->
-    <!--            android:textColor="@color/black"-->
-    <!--            android:textSize="40sp"-->
-    <!--            android:textStyle="bold" />-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/tvDistance"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:gravity="center"-->
-    <!--            android:text="5 min"-->
-    <!--            android:textColor="@color/black"-->
-    <!--            android:textSize="20sp"-->
-    <!--            app:drawableStartCompat="@drawable/ic_walk" />-->
-
-    <!--    </LinearLayout>-->
-
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="10dp"-->
-    <!--        android:gravity="center"-->
-    <!--        android:orientation="vertical">-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/tvBarName"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="The Central Bar"-->
-    <!--            android:textColor="@color/black"-->
-    <!--            android:textStyle="bold" />-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/tvAddress"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="Folkungagatan 57-59" />-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/tvOpenHours"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="Öppet till 01:00" />-->
-
-    <!--        <androidx.appcompat.widget.AppCompatRatingBar-->
-    <!--            android:id="@+id/rbBar"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_gravity="center"-->
-    <!--            android:isIndicator="false"-->
-    <!--            android:max="5"-->
-    <!--            android:numStars="5"-->
-    <!--            android:stepSize="0.5" />-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/bDirection"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:backgroundTint="#4B668E"-->
-    <!--            android:text="Vägbeskrivning"-->
-    <!--            android:textAllCaps="false" />-->
-    <!--    </LinearLayout>-->
-    <!--</LinearLayout>-->
