--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -9,16 +9,17 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         app:cardCornerRadius="30dp"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content"
         app:cardElevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="216dp">
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp">
             <TextView
                 android:id="@+id/tvPrice"
                 android:layout_width="wrap_content"
@@ -57,10 +58,13 @@
 
             <TextView
                 android:id="@+id/tvBarName"
+                app:layout_constrainedWidth="true"
                 android:layout_width="wrap_content"
                 android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:text="The Central Bar"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +73,11 @@
 
             <TextView
                 android:id="@+id/tvAddress"
+                app:layout_constrainedWidth="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:text="Folkungatan 57-59"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tvDistance"
@@ -93,6 +100,7 @@
                 android:max="5"
                 android:numStars="5"
                 android:stepSize="0.5"
+                android:isIndicator="true"
                 android:theme="@style/RatingBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,12 +109,12 @@
             <TextView
                 android:id="@+id/bDirection"
                 android:drawableLeft="@drawable/ic_baseline_directions_24"
-                android:paddingLeft="20dp"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:elevation="3.5dp"
+                android:layout_margin="10dp"
                 android:textColor="#ffffff"
                 android:background="@drawable/buttons_dialog"
                 android:text="Vägbeskrivning"
