If userInput price differ => 5 after 10 inputs and split by ten Marker turns dusk orange and a circa sign is added.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <item name="colorControlNormal">@color/lightGrey</item>
         <item name="colorControlActivated">@color/duskYellow</item>
     </style>
+    <style name="Marker" parent="amu_Bubble.TextAppearance.Dark">
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
