--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#B71C1C</color>
+    <color name="warningYellow">#FFD600</color>
+    <color name="green">#00C853</color>
 </resources>
