User review UI fixed. Screen locked in portrait. Markers are now non clickable on navigation.

--- a/app/src/main/res/layout/user_review.xml
+++ b/app/src/main/res/layout/user_review.xml
@@ -37,6 +37,7 @@
                 android:layout_height="70dp"
                 android:layout_marginTop="20dp"
                 android:isIndicator="false"
+                android:theme="@style/RatingBar"
                 android:numStars="5"
                 android:stepSize="0.5"
                 android:max="5"
@@ -82,6 +83,7 @@
                    android:id="@+id/user_price_input_card_minus_btn"
                     android:layout_width="40dp"
                     app:iconGravity="textStart"
+                    android:backgroundTint="#4B668E"
                     app:iconPadding="0dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
@@ -110,6 +112,7 @@
                     android:id="@+id/user_price_input_card_plus_btn"
                     android:layout_width="40dp"
                     app:iconPadding="0dp"
+                    android:backgroundTint="#4B668E"
                     app:icon="@drawable/ic_plus"
                     app:iconGravity="textStart"
                     android:layout_margin="10dp"
@@ -127,6 +130,7 @@
             app:layout_constraintStart_toStartOf="@id/user_price_input_card"
             app:icon="@drawable/ic_ok_btn"
             app:iconGravity="textStart"
+            android:backgroundTint="#4B668E"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             />
