--- a/app/src/main/res/layout/activity_missing_permissions.xml
+++ b/app/src/main/res/layout/activity_missing_permissions.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/tempbeerlogo" />
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/errorMessage"
